@@ -1,3 +1,7 @@
+2009-01-17  Michal Ludvig  <michal@logix.cz>
+
+	* S3/Utils.py: Added getDictFromTree() and appendXmlTextNode()
+
 2009-01-16  Michal Ludvig  <michal@logix.cz>
 
 	* S3/CloudFront.py: New module for CloudFront support.
